# smtp2webhook

./: .dockerignore  .gitignore  AGENT.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml.example  docker-compose.yml
.github/workflows/: ci.yml
scripts/: update-deps.sh
src/: config.rs  email.rs  main.rs  smtp_server.rs  webhook.rs
testing/: README.md  run_all_tests.sh  test_attachment_email.sh  test_base64_email.sh  test_docker.sh  test_docker_simple.sh  test_healthcheck.sh  test_html_email.sh  test_multipart_email.sh  test_quoted_printable_email.sh  test_send_email.sh  test_webhook.py  validate_tests.sh
