[package]
name = "smtp2webhook"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["rt-multi-thread", "net", "io-util", "time", "macros", "signal", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
toml = "0.8"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
mail-parser = "0.9"

[profile.release]
strip = true
lto = true
codegen-units = 1
